[package]
name = "Marginal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest="0.12.14"
tokio={version = "1.44.1", features = ["full"]}
rsa = "0.9.8"
rand = "0.8"
hex = "0.4.0"
aes="0.8.4"
aes-gcm = "0.10"